--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/shop"
+        android:id="@+id/txtNavigationShop"
         android:icon="@mipmap/ic_cart"
-        android:title="@string/title_shop" />
+        android:title="@string/title_navigation_shop" />
 
     <item
-        android:id="@+id/schedule"
+        android:id="@+id/txtNavigationSchedule"
         android:icon="@mipmap/ic_schedule"
-        android:title="@string/title_schedule" />
+        android:title="@string/title_navigation_schedule" />
 
     <item
         android:id="@+id/scan_placeholder"
@@ -18,12 +18,12 @@
         android:checkable="false" />
 
     <item
-        android:id="@+id/news"
+        android:id="@+id/txtNavigationNews"
         android:icon="@mipmap/ic_news"
-        android:title="@string/title_news" />
+        android:title="@string/title_navigation_news" />
 
     <item
-        android:id="@+id/profile"
+        android:id="@+id/txtNavigationProfile"
         android:icon="@mipmap/ic_profile"
-        android:title="@string/title_profile" />
+        android:title="@string/title_navigation_profile" />
 </menu>
