--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/layoutMainDrawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -16,7 +16,7 @@
         android:orientation="vertical"
         android:paddingTop="20dp">
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/layoutMainToolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@android:color/white"
@@ -46,7 +46,7 @@
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
         <FrameLayout
-            android:id="@+id/frame_layout"
+            android:id="@+id/layoutMainFrame"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -55,7 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
                 <com.google.android.material.bottomappbar.BottomAppBar
-                    android:id="@+id/bottomAppBar"
+                    android:id="@+id/layoutMainBottomAppar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
@@ -65,7 +65,7 @@
                     app:fabCradleRoundedCornerRadius="0dp"
                     app:fabCradleVerticalOffset="0dp">
                     <com.google.android.material.bottomnavigation.BottomNavigationView
-                        android:id="@+id/bottomNavigationView"
+                        android:id="@+id/layoutMainBottomNavigationView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="20dp"
@@ -83,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="#F7F6F2"
                     android:src="@mipmap/ic_scan"
-                    app:layout_anchor="@id/bottomAppBar"
+                    app:layout_anchor="@id/layoutMainBottomAppar"
                     app:maxImageSize="40dp"
                     app:strokeColor="#847c4a"
                     app:strokeWidth="5dp"
@@ -94,9 +94,9 @@
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:id="@+id/nav_view"
+        android:id="@+id/layoutMainNavigationView"
         android:layout_gravity="start"
-        :headerLayout="@layout/nav_header"
+        app:headerLayout="@layout/nav_header"
         app:menu="@menu/nav_menu"
         app:itemTextAppearance="@style/MenuTextAppearance"
         app:itemIconTint="#847c4a"
