--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -14,17 +14,17 @@
         android:src="@drawable/aklogo"/>
 
     <TextView
+        android:id="@+id/txtNavigationName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rebound Piercing"
         android:fontFamily="@font/montserrat_bold"
         android:textColor="#847c4a"
         android:textStyle="bold"/>
 
     <TextView
+        android:id="@+id/txtNavigationEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="reboundpiercing@gmail.com"
         android:fontFamily="@font/montserrat_bold"
         android:textColor="#847c4a"
         android:textSize="14sp"
