--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -8,28 +8,28 @@
         android:checkableBehavior="single">
 
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/txtNavigationHome"
             android:icon="@drawable/baseline_home_24"
             android:title="@string/title_home"
             />
 
         <item
-            android:id="@+id/nav_settings"
+            android:id="@+id/txtNavigationSettings"
             android:icon="@mipmap/ic_settings"
             android:title="@string/title_settings"/>
 
         <item
-            android:id="@+id/nav_share"
+            android:id="@+id/txtNavigationShare"
             android:icon="@mipmap/ic_share"
             android:title="@string/title_share"/>
 
         <item
-            android:id="@+id/nav_about"
+            android:id="@+id/txttxtNavigationAbout"
             android:icon="@drawable/baseline_about_24"
             android:title="@string/title_about_us"/>
     </group>
     <item
-        android:id="@+id/nav_logout"
+        android:id="@+id/txtNavigationLogout"
         android:icon="@drawable/baseline_exit_to_app_24"
         android:title="@string/title_logout"/>
 </menu>
