--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                 android:layout_height="match_parent">
                 <!--  Nút menu bên trái  -->
                 <ImageButton
-                    android:id="@+id/btnMainMenu"
+                    android:id="@+id/imgMainButtonMenu"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_alignParentStart="true"
@@ -78,7 +78,7 @@
                         app:menu="@menu/bottom_menu"/>
                 </com.google.android.material.bottomappbar.BottomAppBar>
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
-                    android:id="@+id/btnMainScan"
+                    android:id="@+id/imgMainButtonScan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:backgroundTint="#F7F6F2"
